--- a/sass/modules/about-us/_about-us-area.scss
+++ b/sass/modules/about-us/_about-us-area.scss
@@ -380,6 +380,7 @@
                 }
             }
             .content-wrapper{
+                padding-left: 12px;
                 @media only screen and (min-width: 768px) and (max-width: 1199px){
                     width: 80%;
                 }
